hard-gists/5455d2c57fb33c1ae04706f2dc4fee01/run.log
=== Docker Run Log for 5455d2c57fb33c1ae04706f2dc4fee01 ===
Started at: Mi 29. Okt 15:42:09 CET 2025

[2025-10-29 15:42:09] START: Running container for 5455d2c57fb33c1ae04706f2dc4fee01
[2025-10-29 15:42:10] SUCCESS: Container 5c6e0203d10ce96b40b468ca4207a1f08406ea3a3c5e08f5c4453298a291fa08 started for 5455d2c57fb33c1ae04706f2dc4fee01
=== Container logs for 5455d2c57fb33c1ae04706f2dc4fee01 ===
  File "/snippet.py", line 323
    if x == 4 : print x , y ; x , y = y , x
                ^^^^^^^^^^^
SyntaxError: Missing parentheses in call to 'print'. Did you mean print(...)?
=== End of logs for 5455d2c57fb33c1ae04706f2dc4fee01 ===
[2025-10-29 15:42:12] INFO: Container 5c6e0203d10ce96b40b468ca4207a1f08406ea3a3c5e08f5c4453298a291fa08 has stopped
